repair menu on mobile

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ a:hover {
     border: none;
     cursor: pointer;
     padding: 10px;
+    position: relative;
     z-index: 1100;
 }
 
